# SIMD_bit_compression

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/bit_pack/avx2/: bit_pack_avx2.cpp  bit_pack_avx2.hpp
src/bit_pack/avx512/: bit_pack_avx512.cpp  bit_pack_avx512.hpp
src/bit_pack/neon/: NEON_2_SSE.h  bit_pack_neon.cpp  bit_pack_neon.hpp
src/bit_pack/sse4/: bit_pack_sse4.cpp  bit_pack_sse4.hpp
src/bit_pack/x86/: bit_pack_x86.cpp  bit_pack_x86.hpp
src/bit_unpack/avx2/: bit_unpack_avx2.cpp  bit_unpack_avx2.hpp
src/bit_unpack/avx512/: bit_unpack_avx512.cpp  bit_unpack_avx512.hpp
src/bit_unpack/neon/: bit_unpack_neon.cpp  bit_unpack_neon.hpp
src/bit_unpack/sse4/: bit_unpack_sse4.cpp  bit_unpack_sse4.hpp
src/bit_unpack/x86/: bit_unpack_x86.cpp  bit_unpack_x86.hpp
